[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/icon.png" type="Texture" id=1]
[ext_resource path="res://src/feats/laser.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 3

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.1511, 23.86 )

[node name="laser" type="Node2D"]
position = Vector2( 500, 500 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 2.72824, 0 )
scale = Vector2( 0.536633, 0.415378 )

[node name="beam" type="Sprite" parent="StaticBody2D"]
material = SubResource( 3 )
texture = ExtResource( 1 )
centered = false
offset = Vector2( 0, -22.5 )
region_enabled = true
region_rect = Rect2( 8.57034, 12.3097, 45.556, 45.0661 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )

[node name="hitPoint" type="Position2D" parent="."]
position = Vector2( 103.167, -79.0326 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="hitPoint"]
rotation = 0.675442
texture = ExtResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )

[node name="toggleArea" type="Area2D" parent="."]
position = Vector2( -3.05176e-05, -100 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="toggleArea"]
material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="toggleArea"]
shape = SubResource( 2 )
[connection signal="area_entered" from="toggleArea" to="." method="_on_toggleArea_area_entered"]
[connection signal="area_exited" from="toggleArea" to="." method="_on_toggleArea_area_exited"]
